--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <kotlin.version>1.3.61</kotlin.version>
     </properties>
+
     <repositories>
         <repository>
             <id>jitpack.io</id>
@@ -29,23 +30,16 @@
             <artifactId>klaxon</artifactId>
             <version>5.0.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-serialization-runtime -->
-        <dependency>
-            <groupId>org.jetbrains.kotlinx</groupId>
-            <artifactId>kotlinx-serialization-runtime</artifactId>
-            <version>0.14.0-1.3.70-eap-134</version>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.ReactiveX</groupId>
-            <artifactId>RxKotlin</artifactId>
-            <version>2.x-SNAPSHOT</version>
-        </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+            <version>1.3.3</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
